[package]
name = "massif"
version = "0.1.0"
edition = "2021"
description = "Fast terrain-RGB PMTiles generator from Float32 elevation rasters"
license = "MIT"
repository = "https://github.com/mapriot/massif"
keywords = ["geo", "terrain", "pmtiles", "gdal", "elevation"]
categories = ["command-line-utilities", "science::geo"]
readme = "README.md"

[[bin]]
name = "massif"
path = "src/main.rs"

[dependencies]
gdal = "0.19"
rayon = "1"
image-webp = "0.2"
pmtiles = { version = "0.21", features = ["write"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
