[package]
name = "massif"
version = "0.1.0"
edition = "2021"
description = "Fast terrain-RGB PMTiles generator from Float32 elevation rasters"
license = "MIT"
repository = "https://github.com/mapriot/massif"
keywords = ["geo", "terrain", "pmtiles", "gdal", "elevation"]
categories = ["command-line-utilities", "science::geo"]
readme = "README.md"

[[bin]]
name = "massif"
path = "src/main.rs"

[dependencies]
gdal = "0.19"
rayon = "1"
# Two WebP encoders intentionally:
# image-webp — pure Rust, fast, used when --compress is omitted
# webp       — libwebp C bindings, slower but smaller, used with --compress 1-9
image-webp = "0.2"
webp = "0.3"
png = "0.17"
rusqlite = { version = "0.39", features = ["bundled"] }
pmtiles = { version = "0.21", features = ["write"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
